Adjust z-index, position, and opacity so that hover effects are correctly displayed on top of nav bar

--- a/app/assets/stylesheets/api/server_index.scss
+++ b/app/assets/stylesheets/api/server_index.scss
@@ -7,14 +7,22 @@
 	align-items: center;
 	overflow: hidden;
 	padding: 0 44px;
+	z-index: 0;
 	.server-index-header {
-		z-index: 1;
-		font-size: 26px;
-		font-weight: bold;
-		line-height: 40px;
-		margin: 100px 0 24px;
-		color: $white;
-		opacity: 1;
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		// z-index: -2;
+
+		.server-index-header-text {
+			z-index: 1;
+			font-size: 28px;
+			font-weight: bold;
+			color: $white;
+			margin-top: 100px;
+			text-shadow: 50px 50px 50px $almost-black;
+		}
 
 		.server-index-background {
 			// display: none;
@@ -22,11 +30,12 @@
 			background-image: image_url('server_index_background.jpg');
 			box-shadow: 0 0 20px 20px $dark-grey inset;
 			opacity: 0.5;
-			position: absolute;
-			top: 0;
-			left: 72px;
-			z-index: -1;
-			height: 200px;
+			// position: absolute;
+			// top: 0;
+			// left: 72px;
+			// z-index: -1;
+			margin: -130px 0 -40px;
+			height: 300px;
 			width: 100%;
 			background-repeat: no-repeat;
 			background-size: cover;
