--- a/app/assets/stylesheets/api/servers.scss
+++ b/app/assets/stylesheets/api/servers.scss
@@ -8,7 +8,7 @@
 	width: 100%;
 	height: 100%;
 	background-color: $dark-grey;
-	z-index: -2;
+	z-index: -1;
 
 	.server-nav {
 		width: 72px;
@@ -17,6 +17,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		z-index: 1;
 		// overflow-x: visible;
 		// overflow-y: scroll;
 		// &::-webkit-scrollbar {
